--- a/Blog2/Views/Shared/_Layout.cshtml
+++ b/Blog2/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("Posts", "Index", "Post")</li>
+                            <li>@Html.ActionLink("Tags", "Index", "Tag")</li>
                         </ul>
                     </nav>
                 </div>
